# lulesh-accelerate

./: .gitignore  .travis.yml  LICENSE  README.md  accelerate-lulesh.cabal  lulesh-accelerate.cabal  stack-7.10.yaml  stack-7.8.yaml  stack-8.0.yaml  stack-8.10.yaml  stack-8.2.yaml  stack-8.4.yaml  stack-8.6.yaml  stack-8.8.yaml
cbits/: visit.cc
reference/C/: LULESH-MPI+OMP_Z.cc  LULESH-OMP.cc  LULESH.cc
reference/C/lulesh-2.0.3/: Makefile  lulesh-init.cc  lulesh.cc
reference/CUDA/: lulesh-fermi-multigpu.cu
reference/CUDA/lulesh-kepler-singlegpu/: Makefile  lulesh.cu  xyz.asc
reference/emerging/: LULESH-App.C
reference/emerging/charm++/: Makefile  lulesh.cc  lulesh.ci  lulesh.h  lulesh_defs.h  lulesh_physics.cc  lulesh_types.h
reference/emerging/loci/: Makefile  README  elem.loci  grid_io.loci  grid_setup.cc  hydro.lh  main.loci  node.loci  test.vars  timestep.loci  utils.loci  varsFileInputs.loci
reference/emerging/openacc/: Makefile  lulesh.cc
src/: Backend.hs  Domain.hs  Init.hs  LULESH.hs  Main.hs  Options.hs  Time.hs  Timing.hs  Type.hs  Util.hs  VisIt.hs
