name:                   lulesh-accelerate
version:                0.1.0.0
synopsis:               Accelerate implementation of LULESH
description:
    Implementation of the Livermore Unstructure Lagrangian Explicit Shock
    Hydronamics (LULESH) application using Accelerate.
    .
    LULESH represents a typical hydrodynamics code such as
    <https://wci.llnl.gov/simulation/computer-codes/ale3d ALE3D>, but is a
    highly simplified application, hard-coded to solve the Sedov blast problem
    on an unstructured hexahedron mesh. For more information on what LULESH
    models see:
    .
      <https://codesign.llnl.gov/lulesh.php>
    .
      <<https://codesign.llnl.gov/images/ale3d.gif>>

homepage:               https://github.com/AccelerateHS/accelerate/
license:                BSD3
license-file:           LICENSE
author:                 Trevor L. McDonell
maintainer:             tmcdonell@cse.unsw.edu.au
copyright:              Trevor L. McDonell <tmcdonell@cse.unsw.edu.au>
-- category:
build-type:             Simple
extra-doc-files:        images/nodes.png
cabal-version:          >=1.10

Flag cuda
  Description:          Enable the CUDA parallel backend for NVIDIA GPUs
  Default:              True

Flag llvm-cpu
  Description:          Enable the LLVM backend for multicore CPUs
  Default:              False

Flag llvm-gpu
  Description:          Enable the LLVM backend for NVIDIA CPUs
  Default:              False


Executable lulesh-accelerate
  hs-source-dirs:       src
  main-is:              Main.hs
  other-modules:        Backend Domain Init LULESH Options Timing Type Util

  ghc-options:          -O2
                        -Wall
                        -threaded
                        -rtsopts
                        -fcontext-stack=30
                        -with-rtsopts=-n2M
                        -with-rtsopts=-A64M

  default-language:     Haskell2010
  build-depends:
      base                      >= 4.6
    , accelerate                >= 0.15
    , ansi-wl-pprint            >= 0.6
    , lens                      >= 4
    , lens-accelerate           >= 0.1
    , linear-accelerate         >= 0.3
    , time                      >= 1.4

  if flag(cuda)
    CPP-options:        -DACCELERATE_CUDA_BACKEND
    build-depends:
        accelerate-cuda         == 2.0.*

  if flag(llvm-cpu)
    CPP-options:        -DACCELERATE_LLVM_NATIVE_BACKEND
    build-depends:
        accelerate-llvm-native  == 2.0.*

  if flag(llvm-gpu)
    CPP-options:        -DACCELERATE_LLVM_PTX_BACKEND
    build-depends:
        accelerate-llvm-ptx     == 2.0.*

-- vim: nospell
